added: docker postgres, finished: controllers, mapping